# Copyright 2018 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  # Used to cause full rebuilds on libc++ rolls. This should be kept in sync
  # with the libcxx_revision var in //DEPS.
  libcxx_revision = "99457fa555797f8c5ac3c076ca288d8481d3b23a"
}
