# Copyright 2018 The Chromium Authors
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  # Used to cause full rebuilds on libc++ rolls. This should be kept in sync
  # with the libcxx_revision var in //DEPS.
  libcxx_revision = "5abc7f839700f0f17338434e1c1c6a8c87c00c11"
}
